[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/font/digital.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/sprites/menu.png" type="Texture" id=2]
[ext_resource path="res://scripts/menu.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.833333 ) ]
}

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.588235, 0.588235, 0.588235, 0.478431 )
position = Vector2( 644, 379 )
scale = Vector2( 0.760844, 0.64433 )
texture = ExtResource( 2 )

[node name="story_mode" type="Button" parent="."]
margin_left = 26.0
margin_top = 359.0
margin_right = 115.0
margin_bottom = 379.0
rect_scale = Vector2( 5, 5 )
text = "story mode"
flat = true
clip_text = true

[node name="endless_mode" type="Button" parent="."]
margin_left = 15.9999
margin_top = 478.0
margin_right = 119.0
margin_bottom = 498.0
rect_scale = Vector2( 5, 5 )
text = "endless mode"
flat = true

[node name="tutorial" type="Button" parent="."]
margin_left = 93.0
margin_top = 608.0
margin_right = 154.0
margin_bottom = 628.0
rect_scale = Vector2( 5, 5 )
text = "tutorial"
flat = true

[node name="Label" type="Label" parent="."]
margin_left = 19.0
margin_top = 50.0
margin_right = 1341.0
margin_bottom = 251.0
custom_fonts/font = ExtResource( 1 )
text = "comrade pepki"

[node name="Label" type="Label" parent="Label"]
show_behind_parent = true
margin_left = 1075.0
margin_top = -92.0
margin_right = 1173.0
margin_bottom = 109.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color = Color( 0.435294, 0.443137, 0.239216, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "2"

[node name="ColorRect" type="ColorRect" parent="Label"]
show_behind_parent = true
margin_left = 43.0
margin_top = 181.0
margin_right = 1158.0
margin_bottom = 227.0
color = Color( 0, 0, 0, 1 )

[node name="Label2" type="Label" parent="Label"]
margin_left = 434.0
margin_top = 191.0
margin_right = 604.0
margin_bottom = 272.0
rect_scale = Vector2( 2, 2 )
text = "S   U   B   S   T   A   N   C   E"

[node name="music" type="AudioStreamPlayer" parent="."]
bus = "music"

[node name="togle_music" type="CheckButton" parent="."]
margin_left = 1079.0
margin_top = 600.0
margin_right = 1173.0
margin_bottom = 653.0
rect_scale = Vector2( 2, 2 )

[node name="Label" type="Label" parent="togle_music"]
margin_left = 13.0
margin_top = 41.0
margin_right = 95.0
margin_bottom = 55.0
text = "toggle music"

[node name="master" type="HSlider" parent="."]
margin_left = 1044.0
margin_top = 448.0
margin_right = 1197.0
margin_bottom = 485.0
rect_scale = Vector2( 1.5, 1.5 )
min_value = -30.0
max_value = 30.0

[node name="game_volumen" type="Label" parent="master"]
margin_left = 25.3333
margin_top = 38.6667
margin_right = 126.333
margin_bottom = 52.6667
text = "master  volume"

[node name="songs" type="HSlider" parent="."]
margin_left = 1046.0
margin_top = 538.0
margin_right = 1199.0
margin_bottom = 569.0
rect_scale = Vector2( 1.5, 1.5 )
min_value = -30.0
max_value = 30.0

[node name="game_volumen" type="Label" parent="songs"]
margin_left = 28.0
margin_top = 38.0
margin_right = 129.0
margin_bottom = 52.0
text = "music volume"

[node name="leyen" type="Label" parent="."]
margin_left = 1067.0
margin_top = 434.0
margin_right = 1107.0
margin_bottom = 448.0
rect_scale = Vector2( 2, 2 )
text = "-                     +"

[node name="leyen2" type="Label" parent="."]
margin_left = 1066.0
margin_top = 526.0
margin_right = 1163.0
margin_bottom = 540.0
rect_scale = Vector2( 2, 2 )
text = "-                     +"

[node name="text2" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.701961 )
margin_left = 959.0
margin_top = 257.0
margin_right = 3211.0
margin_bottom = 662.0
rect_scale = Vector2( 0.15, 0.15 )
custom_colors/font_color = Color( 1, 0.866667, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.960784, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "ver 2.1.2
"

[node name="ap" type="AnimationPlayer" parent="text2"]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/idle = SubResource( 2 )

[connection signal="pressed" from="story_mode" to="." method="_on_story_mode_pressed"]
[connection signal="pressed" from="endless_mode" to="." method="_on_endless_mode_pressed"]
[connection signal="pressed" from="tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="toggled" from="togle_music" to="." method="_on_togle_music_toggled"]
[connection signal="drag_ended" from="master" to="." method="_on_master_drag_ended"]
[connection signal="drag_ended" from="songs" to="." method="_on_songs_drag_ended"]
